# capnp-test

./: Cargo.toml  README.md  build.rs
.src/proto/: iomod_capnp.rs
proto/: iomod.capnp
src/: iomod_capnp.rs  lib.rs
