[package]
name = "capnp-test"
version = "0.1.0"
authors = ["xlem <xlem@akkoro.io>"]
edition = "2018"

build = "build.rs"

[dependencies]
capnp = "0.13.3"
capnp-rpc = "0.13.1"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["compat"] }

[build-dependencies]
capnpc = "0.13.1"
